--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-# Rename this file to .env and remove these quoted lines if you intend to use it
-# See set.js on how to set values
 PREFIX=.
 SESSION_ID=
 BOT_NAME=𝐆𝐈𝐅𝐓𝐄𝐃-𝐌𝐃
@@ -8,7 +6,7 @@ AUTO_READ_STATUS=true
 AUTO_LIKE_STATUS=true
 AUTO_LIKE_EMOJI=💜
 AUTO_REPLY_STATUS=false
-STATUS_REPLY_MSG=✅️ Status Viewed by Gifted-Md!
+STATUS_REPLY_MSG=✅️ Status Viewed by NOIR!
 ANTICALL=false
 ANTICALL_MSG=*_📞 Auto Call Reject Mode Activated by Gifted-Md. 📵 No Calls Allowed Dude!_*
 MODE=public
@@ -16,9 +14,9 @@ WELCOME=false
 GOODBYE=false
 AUTO_READ_MESSAGES=false
 PRESENCE=online
-OWNER_NAME=𝐆𝐈𝐅𝐓𝐄𝐃 𝐓𝐄𝐂𝐇
-OWNER_NUMBER=
-SUDO_NUMBERS=
+OWNER_NAME=⎯⎯ּ︭   🧸̼᪲ 𝐍𝐎𝐈𝐑  ❜❜ ᪶
+OWNER_NUMBER=917439317360
+SUDO_NUMBERS=917439317360
 AUTO_AUDIO=false
 BAD_WORDS=fuck,pussy,anus,idiot
 ANTIBAD=false
@@ -27,6 +25,6 @@ AUTO_BIO_QUOTE=Coding is a good thing
 CHAT_BOT=false
 AUTO_BLOCK=212,98,77
 AUTO_REACT=false
-PACK_NAME=𝐆𝐈𝐅𝐓𝐄𝐃-𝐌𝐃💜
-PACK_NAME=𝐆𝐈𝐅𝐓𝐄𝐃 𝐓𝐄𝐂𝐇
-TIME_ZONE=Africa/Nairobi
+PACK_NAME=⎯⎯ּ︭   🧸̼᪲ 𝐍𝐎𝐈𝐑  ❜❜ ᪶
+PACK_NAME=𝐃𝐎𝐍𝐓 𝐂𝐎𝐏𝐘 𝐌𝐘 𝐅𝐋𝐎𝐖 ‼️
+TIME_ZONE=Asia/Kolkata 
